erros de ortografia

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="description">
             <h3>o Palestrante</h3>
             <p>
-                Rodolfo Almeida é conecido por dar palestras que abalam a estrutura do marketing tradicional. Prepare-se para sair do evento com uma nova visão do que é possivel ser feito para seu negócio decolar.
+                Rodolfo Almeida é conhecido por dar palestras que abalam a estrutura do marketing tradicional. Prepare-se para sair do evento com uma nova visão do que é possivel ser feito para seu negócio decolar.
             </p>
 
         </div>
